--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       playSound('win-sound');
 
       setTimeout(() => {
-        window.location.href = "https://ichibanbergen.no/";
+        window.location.href = "https://xnxx.com/";
       }, 3000); // otomatis pindah setelah 3 detik
     }
 
